<resources>
    <string name="app_name">TunnelEscape</string>
    <string name="SinglePlayer">Single player</string>
    <string name="Exit">Exit</string>
    <string name="RightButtonDescription">Right button</string>
    <string name="LeftButtonDescription">Left button</string>
    <string name="BoostButtonDescription">Boost button</string>
    <string name="UIBarDescription">UI bar image view</string>
    <string name="menu_volume_text">Menu volume</string>
    <string name="menu_volume_decription">Volume for menu</string>
    <string name="settings_string">Settings</string>
    <string name="settings_decription">Settings</string>
    <string name="background_musics_settings">Background music volume</string>
    <string name="background_settings_description">Background music volume</string>
    <string name="effect_music_settings">Effects volume</string>
    <string name="effect_music_description">Effect music volume</string>
    <string name="settings_button">Settings</string>
    <string name="settings_button_description">Settings button</string>
    <string name="Hp_string">HP</string>
    <string name="Hp_text_description">HP text</string>
    <string name="try_again_resource">Try again</string>
    <string name="try_again_descriptor">Try again button</string>
    <string name="main_menu_button">Main menu</string>
    <string name="main_menu_description">Main menu button</string>
    <string name="next_level_button">Next level</string>
    <string name="next_level_description">Next level button</string>
    <string name="score_text">Score text</string>
    <string name="score_text_description">Level score</string>
    <string name="difficulty_switch_text">Alone in the dark mode </string>
    <string name="difficulty_switch_description">Toggle \'alone in the dark mode\'</string>
    <string name="select_level_button">Play</string>
    <string name="select_level_description">Select level button</string>
    <string name="level_name">Level name</string>
    <string name="level_name_description">Level name text</string>
    <string name="level_imageview">Level image</string>
    <string name="level_description_description">Level description</string>
    <string name="score_textview">Score</string>
    <string name="current_score_view">Current score</string>
    <string name="menu_image">Menu image</string>
    <string name="app_description">Game where the objective is to guide object through tunnels without touching the tunnel edges. Score is awarded based on time and collected treasures.</string>
    <string name="user_register_title">Choose an username</string>
    <string name="user_register_title_description">Register an user title</string>
    <string name="enter_username_hint">username</string>
    <string name="user_register_error">Selected username not available, please select some other username</string>
    <string name="user_register_button">Register user</string>
    <string name="register_user_button_description">Register user button</string>
    <string name="skip_registration_button">Skip\n (scores not saved)</string>
    <string name="skip_registration_button_description">Skip user registration button</string>
    <string name="statsButtonText">Stats</string>
    <string name="statsButton_description">Stats button</string>
</resources>
