<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:showDividers="middle"
    android:divider="@drawable/layout_divider">


    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/settings_decription"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:text="@string/settings_string"
        android:textAlignment="center"
        tools:text="@string/settings_string" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/menu_volume_decription"
        android:ems="10"
        android:inputType="text|textPersonName"
        android:singleLine="false"
        android:text="@string/menu_volume_text"
        android:textAlignment="textStart"
        android:layout_marginStart="50dp"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

    <SeekBar
        android:id="@+id/menuVolumeSeekBar"
        style="@android:style/Widget.Material.Light.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:max="100"
        android:progress="5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/background_settings_description"
        android:text="@string/background_musics_settings"
        android:textAlignment="viewStart"
        tools:text="@string/background_musics_settings" />

    <SeekBar
        android:id="@+id/backgroundVolumeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/effect_music_description"
        android:text="@string/effect_music_settings"
        android:textAlignment="viewStart"
        android:layout_marginStart="50dp"
        tools:text="@string/effect_music_settings" />

    <SeekBar
        android:id="@+id/effectsVolumeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="5" />
</LinearLayout>
