<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <VideoView
        android:id="@+id/win_screen_videoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/LevelScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:contentDescription="@string/score_text_description"
        android:text="@string/score_text"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        tools:text="@string/score_text" />

    <Button
        android:id="@+id/NextLevelButton"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/next_level_description"
        android:text="@string/next_level_button"
        android:textColor="@android:color/holo_green_dark"
        tools:text="@string/next_level_button" />

    <Button
        android:id="@+id/WinScreenMenuButton"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/main_menu_description"
        android:lineSpacingExtra="8sp"
        android:text="@string/main_menu_button"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        tools:text="@string/main_menu_button" />

</RelativeLayout>
