<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <VideoView
        android:id="@+id/lose_screen_videoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />

    <Button
        android:id="@+id/TryAgainButton"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/background_dark"
        android:contentDescription="@string/try_again_descriptor"
        android:text="@string/try_again_resource"
        android:textColor="@android:color/holo_red_dark"
        tools:text="@string/try_again_resource" />

    <Button
        android:id="@+id/MenuButton"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/background_dark"
        android:contentDescription="@string/main_menu_description"
        android:text="@string/main_menu_button"
        android:textColor="@android:color/holo_red_dark"
        tools:text="@string/main_menu_button" />

</RelativeLayout>
