<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.westerholmgmail.v.lauri.tunnelescape.GameEngine
        android:id="@+id/gameEngine"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/singlePlayerImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/UIBarDescription"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ui_bar" />

        <ImageButton
            android:id="@+id/boostButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="0dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/BoostButtonDescription"
            app:srcCompat="@drawable/boost" />

        <ImageButton
            android:id="@+id/leftArrowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="150dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/LeftButtonDescription"
            app:srcCompat="@drawable/left_arrow" />

        <ImageButton
            android:id="@+id/rightArrowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="30dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/RightButtonDescription"
            app:srcCompat="@drawable/right_arrow" />

        <ProgressBar
            android:id="@+id/HPBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/singlePlayerImageView"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="255dp"
            android:layout_marginEnd="380dp"
            android:layout_marginBottom="20dp"
            android:clickable="false"
            android:max="100"
            android:progress="100"
            android:progressTint="@android:color/holo_green_dark"
            android:visibility="visible" />

        <TextView
            android:id="@+id/HPText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="265dp"
            android:layout_marginBottom="43dp"
            android:contentDescription="@string/Hp_text_description"
            android:text="@string/Hp_string"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            android:visibility="visible"
            tools:text="@string/Hp_string" />

        <TextView
            android:id="@+id/CurrentScoreView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/HPBar"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-1dp"
            android:layout_marginEnd="283dp"
            android:contentDescription="@string/current_score_view"
            android:textColor="@android:color/holo_green_dark" />

        <TextView
            android:id="@+id/ScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/CurrentScoreView"
            android:layout_alignTop="@+id/HPText"
            android:layout_marginStart="-8dp"
            android:layout_marginTop="0dp"
            android:text="@string/score_textview"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            tools:text="@string/score_textview" />
    </RelativeLayout>
</FrameLayout>
