<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <ImageView
        android:id="@+id/mainMenuImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:contentDescription="@string/menu_image"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_tunnelescape_title"
        tools:srcCompat="@drawable/ic_tunnelescape_title" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <Button
            android:id="@+id/singlePlayerButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/SinglePlayer"
            android:textColor="@android:color/black"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/exitButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginEnd="50dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/Exit"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/Exit" />

        <Button
            android:id="@+id/settingsButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@android:color/holo_red_dark"
            android:contentDescription="@string/settings_button_description"
            android:text="@string/settings_button"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.499"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:text="@string/settings_button" />


    </android.support.constraint.ConstraintLayout>


</FrameLayout>
